:art: Improvements in layout

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -9,3 +9,5 @@
             %span.input-group-btn
               %button.btn.btn-default.btn-sm{:type => "submit"}
                 %span.glyphicon.glyphicon-chevron-right
+
+= render partial: 'layouts/shortened'
