:art: Faustop icon and change in colors

--- a/app/assets/stylesheets/global.css
+++ b/app/assets/stylesheets/global.css
@@ -1,6 +1,11 @@
 body {
-  background: #e67e22;
+  background: #fff;
 }
+
+.form-control {
+  background: #ecf0f1!important;
+}
+
 html, body, .container-table {
   height: 100%;
 }
