--- a/app/views/layouts/_shortened.html.haml
+++ b/app/views/layouts/_shortened.html.haml
@@ -1,2 +1,2 @@
-.shortened{:style => "background-color: #16a085;opacity: 0;pointer-events: none;"}
+.shortened{:style => "background-color: #2980b9;opacity: 0;pointer-events: none;"}
   %div
