--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,7 +6,7 @@
     %title faus.top
     %link{:href => asset_url('faustop.jpg'), :rel => "icon"}/
     
-    %meta{:content => "shortlink, faustão, faustop, linkshorten", :name => "keywords"}/
+    %meta{:content => "shortlink, faustão, faustop, linkshorten, encurtador", :name => "keywords"}/
     %meta{:content => "O encurtador de links mais Faustop da internet", :name => "description"}/
     %meta{:content => "Encurtador de links faustop", :property => "og:title"}/
     %meta{:content => "Encurte URLs grandes em links faus.top", :property => "og:description"}/
