--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,7 +12,8 @@
     %meta{:content => "Encurte URLs grandes em links faus.top", :property => "og:description"}/
     %meta{:content => "https://faus.top", :property => "og:url"}/
     %meta{:content => "website", :property => "og:type"}/
-
+    %meta{:content => "width=device-width, initial-scale=1", :name => "viewport"}/
+    
     = csrf_meta_tags
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
